Add dotenv support and update dependencies
- Added dotenv package for environment variable management.
- Updated .gitignore to include various .env files.
- Added @types/node to devDependencies for TypeScript support.
- Enhanced aiSuggester.ts to fetch suggestions from OpenAI API using the provided API key.
- Updated TypeScript configuration to include node types.

--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@tiptap/extension-underline": "3.4.2",
     "@tiptap/react": "^3.4.2",
     "@tiptap/starter-kit": "^3.4.2",
+    "dotenv": "^17.2.2",
     "lowlight": "^2.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
